--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 document.location = "../../error/px-error.html";
             }
         </script>
-        <script type="text/javascript" src="/js/script.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
         <script type="text/javascript">
             // var ua = navigator.userAgent.toUpperCase();
             //if (ua.indexOf('IPHONE') != -1 || (ua.indexOf('ANDROID') != -1 && ua.indexOf('MOBILE') != -1)) {
