--- a/page=/system/reCAPTCHA.html
+++ b/page=/system/reCAPTCHA.html
@@ -28,16 +28,15 @@
     <!--記事のタイトル-->
     <meta property="og:title" content="とうふの部屋." />
     <!--記事のURL-->
-    <meta property="og:url" content="https://url" />
+    <meta property="og:url" content="https://tofu-s-room.github.io/">
     <!--画像のURL-->
-    <meta property="og:image" content="https://url/assets/img/logo/toufukun.png" />
+    <meta property=" og:image " content="https://tofu-s-room.github.io/assets/img/logo/toufukun.png ">
     <!--記事の説明-->
-    <meta property="og:description" content="とうふの部屋,Tofu's room 動画を楽しみましょう。" />
+    <meta property="og:description " content="とうふの部屋,Tofu 's room 動画を楽しみましょう。" />
     <!--記事の種類-->
     <meta property="og:type" content="top" />
     <!--サイト名-->
     <meta property="og:site_name" content="とうふの部屋" />
-    <meta name="google-site-verification" content="" />
 </head>
 
 <body class="mv" id="content" onselectstart="return false;" onmousedown="return false;" id="top" class="gosic id">
