--- a/page=/system/no-javascript.html
+++ b/page=/system/no-javascript.html
@@ -39,9 +39,11 @@
         <h2 style="text-align:center;">javascript(ジャバスクリプト)はweb(ウェブ)内を動的にに動かす為にあり、</h2>
         <h2 style="text-align:center;">javascript(ジャバスクリプト)を制限することにより、</h2>
         <h2 style="text-align:center;">web(サイト)の閲覧が制限されてしまいます。</h2>
+        <h2 style="text-align:center;">このサイトはjavascript(ジャバスクリプト)が有効になっていないと</h2>
+        <h2 style="text-align:center; color: red;">閲覧できないです。</h2>
     </div>
     <h2 style="text-align:center;">有効化の方法<a href="https://support.microsoft.com/ja-jp/office/javascript-%E3%82%92%E6%9C%89%E5%8A%B9%E3%81%AB%E3%81%99%E3%82%8B-7bb9ee74-6a9e-4dd1-babf-b0a1bb136361">マイクロソフトサイト</a></h2>
-    <h2 style="text-align:center;">とうふの部屋トップ<a href="https://tofu-s-room.github.io">トップ</a></h2>
+    <h2 style="text-align:center;">とうふの部屋<a href="https://tofu-s-room.github.io">トップ</a></h2>
     <!-- ローディング画面 -->
     <div id="loading">
         <!-- 変更部分 ローディング画像の読み込み-->
