--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2022 とうふの部屋.</title>
-    <meta name="data-app-version" content="3.1.1">
+    <meta name="data-app-version" content="3.2.0">
     <!--制作日 2022/10/31-->
-    <!--ver3.1.1 変更内容 reCAPTCHAのテストページを追加 ページ移動 javascript説明変更-->
+    <!--ver3.1.1 変更内容 css崩れ防止対策-->
     <meta name="description" content="とうふの部屋,Tofu's roomで動画を楽しみましょう。">
     <meta name="keywords" content="動画,video,とうふの部屋,とうふくん,top,トップページ,Tofu's room">
     <link href="css/loading.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link href="css/font.css" rel="stylesheet">
     <link href="css/pc-only.css" rel="stylesheet">
     <link href="css/pop.css" rel="stylesheet">
