--- a/page=/redirect/f-m.html
+++ b/page=/redirect/f-m.html
@@ -9,7 +9,8 @@
     <script>
         setTimeout("location.href='https://tofu-s-room.github.io/?from-miya-kyu-gurupu'", 1000 * 0);
     </script>
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
 </head>
 
 <body class="mv" id="content" onselectstart="return false;" onmousedown="return false;" id="top" class="gosic id">
