--- a/watch/video-below/index.html
+++ b/watch/video-below/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>video-below</title>
-    <link href="../../css/style.css" rel="stylesheet" />
+    <link href="../../css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link href="../../css/font.css" rel="stylesheet">
 </head>
 
