--- a/watch/video1/tofu_op_2022.html
+++ b/watch/video1/tofu_op_2022.html
@@ -15,7 +15,8 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="/assets/img/logo/toufukun.png">
     <link rel="icon" href="/assets/img/logo/toufukun.png">
     <link rel="apple-touch-icon" href="/assets/img/logo/toufukun.png" sizes="180x180">
-    <link href="/css/style.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link href="/css/font.css" rel="stylesheet">
     <link href="/css/header.css" rel="stylesheet">
     <link rel="image/png" href="https://tofu-s-room.github.io/assets/img/logo/toufukun.png">
