--- a/page=/redirect/redirect-miya-kyu-gurupu-top.html
+++ b/page=/redirect/redirect-miya-kyu-gurupu-top.html
@@ -10,7 +10,8 @@
         setTimeout("location.href='https://miya-kyu-gurupu.github.io/'", 1000 * 5);
     </script>
     <link href="/css/loading.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link href="/css/font.css" rel="stylesheet">
     <link href="/css/pc-only.css" rel="stylesheet">
     <link href="/css/pop.css" rel="stylesheet">
