--- a/page=/system/reCAPTCHA.html
+++ b/page=/system/reCAPTCHA.html
@@ -11,7 +11,8 @@
     <meta name="keywords" content="">
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <link href="/css/loading.css" rel="stylesheet">
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link href="/css/font.css" rel="stylesheet">
     <link href="/css/pc-only.css" rel="stylesheet">
     <link href="/css/pop.css" rel="stylesheet">
