--- a/page=/system/reference.html
+++ b/page=/system/reference.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>reference</title>
     <link href="/css/loading.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
 </head>
 
 <body class="mv" id="content" onselectstart="return false;" onmousedown="return false;" id="top" class="gosic id">
