--- a/stop.html
+++ b/stop.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="動画,video,fire-com,fire-com-video,top,トップページ">
     <link href="css/loading.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link href="css/font.css" rel="stylesheet">
     <link href="css/pc-only.css" rel="stylesheet">
     <link href="css/pop.css" rel="stylesheet">
